--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "mongoose": "^5.13.2",
     "shortid": "^2.2.16"
   }
