--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECTION_STRING="mongodb+srv://admin:admin@cluster0.bekcudd.mongodb.net/?retryWrites=true&w=majority"
+MONGODB=mongodb+srv://admin:admin@cluster0.bekcudd.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
