--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.env
 # dependencies
 /node_modules
 /.pnp
@@ -14,6 +13,8 @@ node_modules/
 
 # misc
 .DS_Store
+.env
+/.env
 .env.local
 .env.development.local
 .env.test.local
